--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "homepage": "www.ayushnpatel.me",
+  "homepage": "https://ayushnpatel.github.io",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
