--- a/package.json
+++ b/package.json
@@ -1,34 +1,21 @@
 {
-  "name": "portfolio",
-  "private": true,
-  "version": "0.0.0",
+  "name": "ayushnpatel.me",
+  "version": "1.0.0",
   "type": "module",
-  "homepage": "https://ayushnpatel.github.io",
   "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "preview": "vite preview"
+    "dev": "bun --hot src/index.tsx",
+    "build": "bun build --target=bun --production --outdir=dist ./src/index.tsx",
+    "start": "NODE_ENV=production bun dist/index.tsx"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^6.3.0",
-    "@fortawesome/free-brands-svg-icons": "^6.3.0",
-    "@fortawesome/free-regular-svg-icons": "^6.3.0",
-    "@fortawesome/free-solid-svg-icons": "^6.3.0",
-    "@fortawesome/react-fontawesome": "^0.2.0",
-    "@react-spring/parallax": "^9.6.1",
-    "@vercel/analytics": "^1.0.0",
-    "babel-plugin-macros": "^3.1.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "bun-plugin-tailwind": "^0.1.2",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
+    "tailwindcss": "^4.1.17"
   },
   "devDependencies": {
-    "@types/react": "^18.0.27",
-    "@types/react-dom": "^18.0.10",
-    "@vitejs/plugin-react": "^3.1.0",
-    "autoprefixer": "^10.4.13",
-    "postcss": "^8.4.21",
-    "tailwindcss": "^3.2.6",
-    "typescript": "^4.9.3",
-    "vite": "^4.1.0"
+    "@types/bun": "^1.3.3",
+    "@types/react": "^19.2.6",
+    "@types/react-dom": "^19.2.3"
   }
 }
