--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "NODE_ENV=production bun dist/index.tsx"
   },
   "dependencies": {
+    "@types/three": "^0.181.0",
     "bun-plugin-tailwind": "^0.1.2",
     "lucide-react": "^0.554.0",
     "react": "^19.2.0",
