--- a/package.json
+++ b/package.json
@@ -4,12 +4,15 @@
   "type": "module",
   "scripts": {
     "dev": "bun --hot src/index.tsx",
-    "build": "bun build --target=bun --production --outdir=dist ./src/index.tsx",
+    "build": "bun run build-static.ts",
+    "build:static": "bun run build-static.ts",
+    "preview": "cd dist && python3 -m http.server 8000",
     "start": "NODE_ENV=production bun dist/index.tsx"
   },
   "dependencies": {
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@types/three": "^0.181.0",
+    "bun-image-transform": "^1.1.3",
     "bun-plugin-tailwind": "^0.1.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
