--- a/package.json
+++ b/package.json
@@ -3,17 +3,14 @@
   "version": "1.0.0",
   "type": "module",
   "scripts": {
-    "dev": "bun --hot src/index.tsx",
-    "build": "bun run build-static.ts",
-    "build:static": "bun run build-static.ts",
-    "preview": "cd dist && python3 -m http.server 8000",
-    "start": "NODE_ENV=production bun dist/index.tsx"
+    "dev": "vite",
+    "build": "vite build && cp CNAME dist/CNAME",
+    "preview": "vite preview",
+    "start": "vite dev"
   },
   "dependencies": {
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@types/three": "^0.181.0",
-    "bun-image-transform": "^1.1.3",
-    "bun-plugin-tailwind": "^0.1.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.24",
@@ -25,8 +22,12 @@
     "three": "^0.181.2"
   },
   "devDependencies": {
+    "@tailwindcss/vite": "^4.1.17",
     "@types/bun": "^1.3.3",
+    "@types/node": "^22.10.1",
     "@types/react": "^19.2.6",
-    "@types/react-dom": "^19.2.3"
+    "@types/react-dom": "^19.2.3",
+    "@vitejs/plugin-react": "^4.3.4",
+    "vite": "^6.0.7"
   }
 }
